# cmake-app-example

./: .gitignore  CMakeLists.txt  README.md
include/my_app/: stuff.hpp
src/: CMakeLists.txt  main.cpp
